src/test/compile-fail/import-from-path.rs
// error-pattern:expecting
import foo::{bar}::baz